# urbackup_frontend_wx

./: .gitignore  CbtStatus.cpp  CbtStatus.h  ConfigPath.cpp  ConfigPath.h  Connector.cpp  Connector.h  FileSettingsReader.cpp  FileSettingsReader.h  Info.cpp  Info.h  License-Install.txt  Logs.cpp  Logs.h  Makefile.am  RestoreWindowsComponents.cpp  RestoreWindowsComponents.h  SelectRestoreWindowsComponents.cpp  SelectRestoreWindowsComponents.h  SelectWindowsComponents.cpp  SelectWindowsComponents.h  Settings.cpp  Settings.h  SetupWizard.cpp  SetupWizard.h  SolutionDependencies.props.default  Status.cpp  Status.h  TaskBarBaloon.cpp  TaskBarBaloon.h  TranslationHelper.cpp  TranslationHelper.h  TrayIcon.cpp  TrayIcon.h  UrBackupClientGUI.rc  UrBackupClientGUI.sln  UrBackupClientGUI.vcxproj  UrBackupClientGUI.vcxproj.filters  UrBackupClientGUI_VS12.sln  UrBackupClientGUI_VS12.vcxproj  (+36 more)
.tx/: config
KillProc/: KillProc.sln  KillProc.vcxproj  KillProc.vcxproj.filters  getpid.h  main.cpp
data/: args.txt  args_debug.txt  args_server03.txt  args_xp.txt  backup-no-recent.xpm  backup-ok-big.xpm  backup-ok.xpm  backup-progress-pause.xpm  backup-progress.xpm  enable_debug_logging.bat  enable_internet_only.bat  info.txt  initial_settings.cfg  license.txt  new.txt  prefilebackup_new.bat  scrub_disk.bat  server_idents_new.txt  settings.cfg  updates_h.dat.orig  version_info.txt
data/en/: trans.mo
data/fr/: trans.mo  trans.po
data/lang/cs/: urbackup.mo
data/lang/da/: urbackup.mo
data/lang/de/: urbackup.mo
data/lang/es/: urbackup.mo
data/lang/et/: urbackup.mo
data/lang/fa/: urbackup.mo
data/lang/fi/: urbackup.mo
data/lang/fr/: urbackup.mo
data/lang/it/: urbackup.mo
data/lang/nl/: urbackup.mo
data/lang/no_NO/: urbackup.mo
data/lang/pl/: urbackup.mo
data/lang/pt/: urbackup.mo
data/lang/pt_BR/: urbackup.mo
data/lang/ru/: urbackup.mo
data/lang/sk/: urbackup.mo
data/lang/sv/: urbackup.mo
data/lang/tr/: urbackup.mo
data/lang/uk/: urbackup.mo
data/lang/zh_CN/: urbackup.mo
data/lang/zh_TW/: urbackup.mo
data/ru/: trans.mo  trans.po
data/urbackup/: backup_client_new.db
gui/: GUI.cpp  GUI.h  GUIRestoreWindowsComponents.cpp  GUIRestoreWindowsComponents.h  GUISetupWizard.cpp  GUISetupWizard.h  GUIWindowsComponents.cpp  GUIWindowsComponents.h  RestoreWindowsComponents.fbp  WindowsComponents.fbp  settings.fbp  setupWizard.fbp
lang/da/: urbackup.mo  urbackup.po
lang/de/: urbackup.mo  urbackup.po
lang/en/: base.po
lang/es/: urbackup.mo  urbackup.po
lang/fa/: urbackup.mo  urbackup.po
lang/fr/: urbackup.mo  urbackup.po
lang/it/: urbackup.mo  urbackup.po
lang/nl/: urbackup.mo  urbackup.po
lang/pl/: urbackup.mo  urbackup.po
lang/pt_BR/: urbackup.mo  urbackup.po
lang/ru/: urbackup.mo  urbackup.po
lang/sk/: urbackup.mo  urbackup.po
lang/uk/: urbackup.mo  urbackup.po
lang/zh_CN/: urbackup.mo  urbackup.po
lang/zh_TW/: urbackup.mo  urbackup.po
translations/urbackup.frontend/: ar.po  ar_SA.po  cs_CZ.po  da_DK.po  de.po  en.po  en_GB.po  en_US.po  es.po  et.po  fa_IR.po  fi.po  fr.po  fr_FR.po  he.po  it_IT.po  ja.po  nl.po  no_NO.po  pl.po  pl_PL.po  pt_BR.po  pt_PT.po  ro.po  ro_RO.po  ru.po  sk.po  sl_SI.po  sv.po  tr.po  tr_TR.po  uk.po  zh_CN.GB2312.po  zh_TW.Big5.po
